--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,12 @@ textarea {
     transition: all .4s ease-in-out;
 }
 
+.button-inner:hover,
+.book-now:hover{
+    background-color: #feaf39;
+    border-radius: 0 12px 0 12px;
+}
+
 .navbar-nav .nav-link:hover {
     color: #fea116;
 }
@@ -291,7 +297,7 @@ textarea {
 .about-content p,
 .testimonial-content p {
     font-family: "Heebo", sans-serif;
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
     color: #666565;
     transition: all .4s ease-in-out;
@@ -862,7 +868,7 @@ textarea {
     outline: none;
     width: 100%;
     height: 60px;
-    padding: .375rem .75rem;
+    padding: 6px 96px 6px 12px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -1101,6 +1107,7 @@ textarea {
     .cross-btn {
         position: absolute;
         top: 8px;
+        left: 18px;
     }
 
     .cross-btn img {
@@ -1185,6 +1192,14 @@ textarea {
 }
 
 @media (max-width: 480px) {
+    h1 {
+        font-size: 40px;
+    }
+
+    .navbar-brand img {
+        width: 185px;
+    }
+
     .delicious-meal-img img {
         width: 321px;
     }
@@ -1205,38 +1220,6 @@ textarea {
 
     .delicious-meal-img img {
         width: 267px;
-    }
-
-    .nav-tabs .nav-link i {
-        font-size: 30px;
-    }
-
-    .nav-tabs .nav-link img {
-        width: 30px;
-        height: 30px;
-    }
-
-    .nav-tabs .nav-link span {
-        font-size: 14px;
-    }
-
-    .chicken-burger-content p,
-    .chicken-burger-content span {
-        font-size: 16px;
-    }
-
-    .chicken-burger p {
-        font-size: 14px;
-    }
-
-    .booking-sec-form {
-        padding: 20px;
-    }
-}
-
-@media (max-width: 360px) {
-    .delicious-meal-img img {
-        width: 228px;
     }
 
     .nav-tabs .nav-link i {
@@ -1261,6 +1244,42 @@ textarea {
         margin-right: 0;
     }
 
+    .menu-list .nav-link:last-child {
+        margin-right: 0;
+    }
+
+
+    .chicken-burger-content p,
+    .chicken-burger-content span {
+        font-size: 16px;
+    }
+
+    .chicken-burger p {
+        font-size: 14px;
+    }
+
+    .booking-sec-form {
+        padding: 20px;
+    }
+
+    .copyright-sec p {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 360px) {
+    h3 {
+        font-size: 30px;
+    }
+
+    .delicious-meal-img img {
+        width: 228px;
+    }
+
+    .booking-btn {
+        width: 47%;
+    }
+
     .menu-sec-content h5::before {
         right: -51px;
         width: 36px;
@@ -1269,6 +1288,16 @@ textarea {
     .menu-sec-content h5::after {
         left: -51px;
         width: 36px;
+    }
+
+    .chicken-burger p {
+        font-size: 12px;
+    }
+
+    .informetion p,
+    .about-content p,
+    .testimonial-content p {
+        font-size: 15px;
     }
 
 
@@ -1291,7 +1320,8 @@ textarea {
         margin-right: 45px;
     }
 
-    .menu-list .nav-link:last-child {
-        margin-right: 0;
+    .copyright-sec p {
+        font-size: 14px;
     }
+
 }
